Tried to fix the 15/16 tests on small screens, but realized there is nothing to do on my side. The problem comes from the way those tests are designed.

--- a/tech-documentation/css/style.css
+++ b/tech-documentation/css/style.css
@@ -15,7 +15,7 @@ body {
         ". sidebar . section-right .";
 }
 #navbar {
-  max-height: 95vh;
+  max-height: 100vh;
   padding: 1em;
   position: sticky;
   top: 0;
@@ -26,14 +26,15 @@ body {
     color: #fff;
   }
 
+  #menu-container {
+    max-height: 100vh;
+    overflow-y: scroll;
+  }
   .code-example {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: .5em;
-  }
-
-  .emmet-example {
   }
 
   .language-html {
